--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,8 +1,14 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .app {
   display: grid;
   grid-template-areas:
           "header header header"
-          "nav content content";
+          "navbar content content";
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
