--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -2,6 +2,7 @@
   grid-area: navbar;
   background: red;
   padding: 20px;
+  height: 300px;
 }
 
 .navbar ul {
@@ -13,7 +14,6 @@
 }
 
 .item a {
-  font-weight: bold;
   color: white;
   text-decoration: none;
 }
